# skybin

./: .excluded_secrets.example  .gitignore  API_USAGE.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  DEPLOYMENT.md  DEVELOPMENT_GAMEPLAN.md  FIX_COMPLETE.md  FIX_TRACKER.md  GITHUB_PAGES_SETUP.md  LICENSE  LIVE_DEPLOYMENT_READY.md  LIVE_TESTING_GUIDE.md  PHASE1_COMPLETION.md  PHASE1_SUMMARY.md  PHASE2_COMPLETE.md  PHASE2_COMPLETION.md  PHASE2_IMPROVEMENTS.md  PHASE3_COMPLETE.md  PHASE3_IMPROVEMENTS.md  PHASE_3_COMPLETION.md  PRIVACY_POLICY.md  PROJECT_SNAPSHOT_2025-11-24.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_START_GITHUB_PAGES.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SESSION_2025-11-25_SUMMARY.md  WARP.md  WEBSITE_STATUS.md  config.toml  dashboard.html  deploy.sh  index.html
.github/: ACTION_PINS.md
.github/workflows/: ci.yml  pages.yml
docs/: EXPANSION_ROADMAP.md  IMPLEMENTATION_v2.3.md  ROADMAP_v2.2.md
migrations/: 001_initial.sql  004_add_staff_badge.sql
src/: admin.rs  anonymization.rs  auto_title.rs  config.rs  credential_summary.rs  db.rs  dedup.rs  hash.rs  lang_detect.rs  lib.rs  main.rs  models.rs  proxy.rs  quality.rs  rate_limiter.rs  realtime.rs  scheduler.rs  search_history.rs  secret_extractor.rs  url_classifier.rs  validator.rs  virustotal.rs
src/patterns/: detector.rs  mod.rs  rules.rs
src/scrapers/: bpast.rs  bpaste.rs  codepad.rs  controlc.rs  credential_filter.rs  defuse.rs  dpaste.rs  dpaste_org.rs  external_url.rs  ghostbin.rs  github_code.rs  github_gists.rs  hastebin.rs  ideone.rs  ixio.rs  justpaste.rs  kbinbin.rs  mod.rs  paste2.rs  paste_ee.rs  paste_rs.rs  pastebin.rs  pastebin_pl.rs  pastecode.rs  pastefs.rs  pastesio.rs  privatebin.rs  psbdmp.rs  quickpaste.rs  rentry.rs  slexy.rs  snippet.rs  sprunge.rs  termbin.rs  tor_pastes.rs  traits.rs  ubuntu_pastebin.rs  zerobin.rs
src/web/: handlers.rs  mod.rs
src/web/templates/: base.html  dashboard.html  paste_detail.html  upload.html
static/: admin.html  changelog.html  disclaimer.html  index.html  landing.html  live.html  paste.html  search.html  search_v2.html  status.html  styles.css  upload.html
telegram-scraper/: .env.example  .excluded_secrets.example  channel_manager.py  credential_extractor.py  requirements.txt  scraper.py
telegram-scraper-rs/: Cargo.toml  config.example.toml  telegram-scraper-rs.service
telegram-scraper-rs/src/: archive.rs  classifier.rs  config.rs  main.rs  server.rs  skybin.rs  stats.rs  telegram.rs
templates/: base.html  dashboard.html  paste_detail.html  search.html  upload.html
tests/: e2e_scrapers_anonymization.rs
