[package]
name = "paste-vault"
version = "1.4.0"
edition = "2021"
authors = ["NullMe <dev@nullme.lol>"]
description = "Multi-source paste aggregator with pattern detection"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "paste-vault"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip"] }

# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled", "uuid"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip"] }

# Regex and pattern matching
regex = "1.11"
once_cell = "1.20"

# Hashing
sha2 = "0.10"
hex = "0.4"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# IP/CIDR handling
ipnetwork = "0.20"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async trait support
async-trait = "0.1"

# Rate limiting
governor = "0.7"

# Random number generation
rand = "0.8"

# Lazy static initialization
lazy_static = "1.4"

# HTML escaping
html-escape = "0.2"

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
