[package]
name = "telegram-scraper"
version = "2.1.0"
edition = "2021"
description = "High-performance Telegram scraper for SkyBin"
authors = ["NullMe"]

[lib]
path = "src/main.rs"

[dependencies]
# Telegram client
grammers-client = "0.7"
grammers-session = "0.7"
grammers-tl-types = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client/server
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Archive support
zip = "2"
flate2 = "1.0"
tar = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto/hashing
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
regex = "1"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
parking_lot = "0.12"
anyhow = "1"
bzip2 = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
